<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
     tools:context=".MainActivity"


    android:id="@+id/MainActivity"
    android:orientation="vertical"
    android:baselineAligned="true"
    android:clickable="true"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:transitionGroup="false"
    android:background="@drawable/helpig"
    android:backgroundTintMode="src_in"
    android:gravity="center|fill_vertical|center_horizontal"
    android:foreground="#fcfbfb"><![CDATA[

    EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3" />





    ]]>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Button_text"
            android:layout_weight="0.75"
            android:id="@+id/textView"
            android:elegantTextHeight="false"
            android:textAlignment="center"
            android:autoText="false"
            android:focusable="false"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText"
            android:enabled="true"

            android:layout_weight="0.2"
            android:text="0"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/m"
            android:id="@+id/textView5"
            android:layout_weight="0.05"
            android:textColor="#ff000000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hight"
            android:layout_weight="0.75"
            android:id="@+id/textView2"
            android:layout_column="1"
            android:textAlignment="center"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_column="2"
            android:layout_weight="0.2"
            android:text="0"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/h"
            android:id="@+id/textView6"
            android:layout_weight="0.05"
            android:layout_column="3"
            android:textColor="#ff000000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Week"
            android:id="@+id/textView3"
            android:layout_weight="0.75"
            android:layout_column="0"
            android:textAlignment="center"
            android:textColor="#ff000000" />

        <Spinner
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="0.25"
            android:text="@string/Week"
            android:nestedScrollingEnabled="false"
            android:clickable="true"
            android:layout_column="0"
            android:layout_marginRight="0dp"


            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mn"
            android:layout_weight="0.75"
            android:id="@+id/textView4"
            android:layout_column="0"
            android:textAlignment="center"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_weight="0.2"
            android:id="@+id/editText4"
            android:layout_column="0"
            android:text="0"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/m"
            android:id="@+id/textView7"
            android:layout_weight="0.05"
            android:layout_column="0"
            android:textColor="#ff000000"
            android:textSize="15dp" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/CheckIsCheck"
        android:id="@+id/check"
        android:checked="false"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonGo"
        android:id="@+id/button"
        android:onClick="onClicks"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:alpha="10"
        android:minWidth="100dp"
        android:nestedScrollingEnabled="true"

        android:foreground="#ffffff"
        android:ellipsize="start" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2744392137373671/2949505948"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
